Remove disableArrowScrolling as no longer required after overflow edit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,6 @@ body {
     overflow: auto;
 }
 
-/* .no-scroll {
-    overflow: hidden !important;
-  } */
-
-
 #logo {
     color: #9ddb0a;
 }
